// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login Form /> (not authenticated) renders a snapshot successfully 1`] = `
<div>
  <h1
    className="title"
  >
    Log In
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <label
        className="label"
      >
        Email
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="email"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <label
        className="label"
      >
        Password
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="password"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`<Register Form /> (not authenticated) renders a snapshot successfully 1`] = `
<div>
  <h1
    className="title"
  >
    Register
  </h1>
  <form
    onSubmit={[Function]}
  >
    <div
      className="field"
    >
      <label
        className="label"
      >
        Username
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="username"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <label
        className="label"
      >
        Email
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="email"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          type="email"
          value=""
        />
      </div>
    </div>
    <div
      className="field"
    >
      <label
        className="label"
      >
        Password
      </label>
      <div
        className="control"
      >
        <input
          className="input"
          name="password"
          onChange={
            [MockFunction] {
              "calls": Array [
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": undefined,
                },
              ],
            }
          }
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="button"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
